# WhatToDo

./: README.md
backend/: .env  .gitignore  Cargo.toml  database.sqlite  database.sqlite-shm  database.sqlite-wal
backend/migrations/: 20250331171647_todos.sql
backend/src/: main.rs  routes.rs
frontend/: package-lock.json  package.json
frontend/src/routes/: +page.svelte  +page.ts
