[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["form"] }
axum-error = "0.2"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
tokio = { version = "1.44", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }

[profile.release]
opt-level = 3          # Maximum optimization (0-3, s, z)
lto = "thin"           # Enable Link-Time Optimization (LTO)
codegen-units = 1      # Single codegen unit for better optimizations
panic = "abort"        # Reduce binary size by removing unwinding
strip = "symbols"      # Remove debug symbols (use "debuginfo" if needed)
debug = false          # No debug info for smaller binary (set to true for backtraces)
incremental = false    # Disable incremental builds for optimized final binary
