[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["form"] }
axum-error = "0.2"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
tokio = { version = "1.44", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tower = "0.5"
hyper = "1.6"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false
